@@ -1,4 +1,5 @@
 ﻿Sigil v0.2.0 RC1 ADD_DATE
+    - changes in the Book Browser now update the modified state of the main window (issue #331)
     - the Book Browser can now be opened/closed from thr View menu (issue #335)
     - all the toolbars now have UI-facing names
     - by injecting a custom XML reader into QDom, the following issue were fixed:
